--- a/toefl_ios/toefl_ios/WordView/WordDetailViewController.xib
+++ b/toefl_ios/toefl_ios/WordView/WordDetailViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,9 +13,11 @@
             <connections>
                 <outlet property="customTextView" destination="IJy-I2-kUf" id="5NH-6r-4ge"/>
                 <outlet property="headerView" destination="gEw-6J-DQS" id="e0E-t8-VuT"/>
+                <outlet property="headerViewHeight" destination="23R-xf-H1Z" id="bFU-W9-7fJ"/>
                 <outlet property="meanLabel" destination="QOG-YP-cqj" id="BNy-Rc-0Yi"/>
                 <outlet property="nameLabel" destination="bYZ-Yx-54N" id="moF-11-GJg"/>
-                <outlet property="symbolLabel" destination="Qga-Ar-d22" id="Zvo-6b-xbR"/>
+                <outlet property="symbolButton" destination="tuf-U7-UbG" id="oFP-uP-5C4"/>
+                <outlet property="symbolWidth" destination="RyQ-de-0b5" id="8Ic-sr-GJN"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -25,10 +27,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gEw-6J-DQS">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="95"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bYZ-Yx-54N" userLabel="nameLabel">
-                            <rect key="frame" x="10" y="10" width="0.0" height="21.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bYZ-Yx-54N" userLabel="nameLabel">
+                            <rect key="frame" x="10" y="10" width="39" height="21.5"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21.5" id="kwk-sU-4un"/>
                             </constraints>
@@ -36,34 +38,36 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qga-Ar-d22" userLabel="symboLabel">
-                            <rect key="frame" x="20" y="21" width="0.0" height="0.0"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOG-YP-cqj" userLabel="meanLabel">
-                            <rect key="frame" x="10" y="36.5" width="355" height="43"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="i am k" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOG-YP-cqj" userLabel="meanLabel">
+                            <rect key="frame" x="10" y="66.5" width="355" height="28.5"/>
+                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tuf-U7-UbG" customClass="SymbolButton">
+                            <rect key="frame" x="10" y="36.5" width="355" height="25"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="355" id="RyQ-de-0b5"/>
+                                <constraint firstAttribute="height" constant="25" id="aZy-kM-8Qp"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" red="0.80000001190000003" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="QOG-YP-cqj" secondAttribute="bottom" id="0dd-eU-5wM"/>
-                        <constraint firstAttribute="height" constant="80" id="23R-xf-H1Z"/>
-                        <constraint firstItem="Qga-Ar-d22" firstAttribute="centerY" secondItem="bYZ-Yx-54N" secondAttribute="centerY" id="4PD-UJ-rWQ"/>
-                        <constraint firstItem="QOG-YP-cqj" firstAttribute="top" secondItem="bYZ-Yx-54N" secondAttribute="bottom" constant="5" id="Kuy-vI-bZI"/>
+                        <constraint firstAttribute="height" constant="95" id="23R-xf-H1Z"/>
+                        <constraint firstItem="QOG-YP-cqj" firstAttribute="top" secondItem="tuf-U7-UbG" secondAttribute="bottom" constant="5" id="IdG-Tc-1ZH"/>
                         <constraint firstItem="QOG-YP-cqj" firstAttribute="leading" secondItem="gEw-6J-DQS" secondAttribute="leading" constant="10" id="R2X-ZM-zlb"/>
+                        <constraint firstItem="tuf-U7-UbG" firstAttribute="top" secondItem="bYZ-Yx-54N" secondAttribute="bottom" constant="5" id="Vi2-af-zxP"/>
                         <constraint firstItem="bYZ-Yx-54N" firstAttribute="top" secondItem="gEw-6J-DQS" secondAttribute="top" constant="10" id="XrW-sr-eeo"/>
-                        <constraint firstItem="Qga-Ar-d22" firstAttribute="leading" secondItem="bYZ-Yx-54N" secondAttribute="trailing" constant="10" id="i51-o1-XRm"/>
+                        <constraint firstItem="tuf-U7-UbG" firstAttribute="leading" secondItem="bYZ-Yx-54N" secondAttribute="leading" id="iir-Bd-Ew3"/>
                         <constraint firstAttribute="trailing" secondItem="QOG-YP-cqj" secondAttribute="trailing" constant="10" id="v4I-eF-t84"/>
                         <constraint firstItem="bYZ-Yx-54N" firstAttribute="leading" secondItem="gEw-6J-DQS" secondAttribute="leading" constant="10" id="waK-jt-Cto"/>
                     </constraints>
                 </view>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IJy-I2-kUf" customClass="CustomTextView">
-                    <rect key="frame" x="5" y="79.5" width="370" height="587.5"/>
+                    <rect key="frame" x="5" y="95" width="370" height="572"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
